<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/homeFragment"
            android:checked="true"
            android:icon="@drawable/ic_menu_film"
            android:title="@string/nav_home_page" />
    </group>
</menu>
